# 2023-06-15-cmake-intro

./: .gitignore  README.md  index.html
assets/trend_fig/: build_system_trends.html  data.csv  make_plot.py
examples/02-simple-app/: CMakeLists.txt  simple_app.cpp  simple_lib.cpp
examples/02-simple-app/include/: simple_lib.hpp
examples/02-simple-exec/: CMakeLists.txt  simple.cpp
examples/02-simple-header-lib/: CMakeLists.txt
examples/02-simple-header-lib/install/include/: simple_header_lib.hpp
examples/02-simple-lib/: CMakeLists.txt  simple.cpp
examples/03-test-simple/: CMakeLists.txt
examples/03-test-simple/include/simple_lib/: simple_lib.hpp
examples/03-test-simple/src/: CMakeLists.txt  simple_lib.cpp
examples/03-test-simple/test/: CMakeLists.txt  test_1.cpp  test_2.cpp
